--- a/src/armaturkin/fxml/Main.fxml
+++ b/src/armaturkin/fxml/Main.fxml
@@ -25,7 +25,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Label fx:id="upperDropSpace" alignment="CENTER" layoutX="206.0" layoutY="33.0" onDragDropped="#upperDragDropped" onDragOver="#upperDragOver" prefHeight="200.0" prefWidth="400.0" text="upperLabel" textAlignment="CENTER" wrapText="true">
+                  <Label fx:id="upperDropSpace" alignment="CENTER" layoutX="206.0" layoutY="33.0" onDragDropped="#upperDragDropped" onDragOver="#upperDragOver" prefHeight="200.0" prefWidth="400.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="upperLabel" textAlignment="CENTER" wrapText="true">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -33,7 +33,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lowerDropSpace" alignment="CENTER" layoutX="206.0" layoutY="252.0" onDragDropped="#lowerDragDropped" onDragOver="#lowerDragOver" prefHeight="200.0" prefWidth="400.0" text="lowerLabel" textAlignment="CENTER" wrapText="true">
+                  <Label fx:id="lowerDropSpace" alignment="CENTER" layoutX="206.0" layoutY="252.0" onDragDropped="#lowerDragDropped" onDragOver="#lowerDragOver" prefHeight="200.0" prefWidth="400.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="lowerLabel" textAlignment="CENTER" wrapText="true">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -85,31 +85,36 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="font12Button" layoutX="14.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont12" prefHeight="37.0" prefWidth="41.0" text="12" AnchorPane.bottomAnchor="14.0">
+                  <Button fx:id="font12Button" layoutX="98.0" layoutY="519.0" mnemonicParsing="false" onAction="#setResultLabelFont12" prefHeight="37.0" prefWidth="41.0" text="12" AnchorPane.bottomAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="font14Button" layoutX="69.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont14" prefHeight="37.0" prefWidth="41.0" text="14" AnchorPane.bottomAnchor="14.0">
+                  <Button fx:id="font14Button" layoutX="153.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont14" prefHeight="37.0" prefWidth="41.0" text="14" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="font16Button" layoutX="124.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont16" prefHeight="37.0" prefWidth="41.0" text="16" AnchorPane.bottomAnchor="14.0">
+                  <Button fx:id="font16Button" layoutX="208.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont16" prefHeight="37.0" prefWidth="41.0" text="16" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="font18Button" layoutX="179.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont18" prefHeight="37.0" prefWidth="41.0" text="18" AnchorPane.bottomAnchor="14.0">
+                  <Button fx:id="font18Button" layoutX="263.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont18" prefHeight="37.0" prefWidth="41.0" text="18" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="font20Button" layoutX="234.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont20" prefHeight="37.0" prefWidth="41.0" text="20" AnchorPane.bottomAnchor="14.0">
+                  <Button fx:id="font20Button" layoutX="318.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont20" prefHeight="37.0" prefWidth="41.0" text="20" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
+                  <Text fx:id="notificationText" layoutX="14.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Шрифт" wrappingWidth="79.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Text>
                </children></AnchorPane>
       </content>
     </Tab>
@@ -117,7 +122,7 @@
         <content>
           <AnchorPane fx:id="anchorPane3" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Label fx:id="summaryDropSpace1" alignment="CENTER" layoutX="10.0" layoutY="32.0" onDragDropped="#summaryDragDropped1" onDragOver="#summaryDragOver" onMouseClicked="#click1" prefHeight="115.0" prefWidth="385.0" text="summaryLabel1" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace1" alignment="CENTER" layoutX="10.0" layoutY="32.0" onDragDropped="#summaryDragDropped1" onDragOver="#summaryDragOver" onMouseClicked="#click1" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel1" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -141,7 +146,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace2" alignment="CENTER" layoutX="405.0" layoutY="32.0" onDragDropped="#summaryDragDropped2" onDragOver="#summaryDragOver" onMouseClicked="#click2" prefHeight="115.0" prefWidth="385.0" text="summaryLabel2" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace2" alignment="CENTER" layoutX="405.0" layoutY="32.0" onDragDropped="#summaryDragDropped2" onDragOver="#summaryDragOver" onMouseClicked="#click2" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel2" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -149,7 +154,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace3" alignment="CENTER" layoutX="10.0" layoutY="152.0" onDragDropped="#summaryDragDropped3" onDragOver="#summaryDragOver" onMouseClicked="#click3" prefHeight="115.0" prefWidth="385.0" text="summaryLabel3" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace3" alignment="CENTER" layoutX="10.0" layoutY="152.0" onDragDropped="#summaryDragDropped3" onDragOver="#summaryDragOver" onMouseClicked="#click3" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel3" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -157,7 +162,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace5" alignment="CENTER" layoutX="10.0" layoutY="272.0" onDragDropped="#summaryDragDropped5" onDragOver="#summaryDragOver" onMouseClicked="#click5" prefHeight="115.0" prefWidth="385.0" text="summaryLabel5" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace5" alignment="CENTER" layoutX="10.0" layoutY="272.0" onDragDropped="#summaryDragDropped5" onDragOver="#summaryDragOver" onMouseClicked="#click5" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel5" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -165,7 +170,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace7" alignment="CENTER" layoutX="10.0" layoutY="392.0" onDragDropped="#summaryDragDropped7" onDragOver="#summaryDragOver" onMouseClicked="#click7" prefHeight="115.0" prefWidth="385.0" text="summaryLabel7" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace7" alignment="CENTER" layoutX="10.0" layoutY="392.0" onDragDropped="#summaryDragDropped7" onDragOver="#summaryDragOver" onMouseClicked="#click7" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel7" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -173,7 +178,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace4" alignment="CENTER" layoutX="405.0" layoutY="152.0" onDragDropped="#summaryDragDropped4" onDragOver="#summaryDragOver" onMouseClicked="#click4" prefHeight="115.0" prefWidth="385.0" text="summaryLabel4" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace4" alignment="CENTER" layoutX="405.0" layoutY="152.0" onDragDropped="#summaryDragDropped4" onDragOver="#summaryDragOver" onMouseClicked="#click4" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel4" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -181,7 +186,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace6" alignment="CENTER" layoutX="405.0" layoutY="272.0" onDragDropped="#summaryDragDropped6" onDragOver="#summaryDragOver" prefHeight="115.0" prefWidth="385.0" text="summaryLabel6" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace6" alignment="CENTER" layoutX="405.0" layoutY="272.0" onDragDropped="#summaryDragDropped6" onDragOver="#summaryDragOver" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel6" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -189,7 +194,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="summaryDropSpace8" alignment="CENTER" layoutX="405.0" layoutY="392.0" onDragDropped="#summaryDragDropped8" onDragOver="#summaryDragOver" onMouseClicked="#click8" prefHeight="115.0" prefWidth="385.0" text="summaryLabel8" textAlignment="CENTER">
+                  <Label fx:id="summaryDropSpace8" alignment="CENTER" layoutX="405.0" layoutY="392.0" onDragDropped="#summaryDragDropped8" onDragOver="#summaryDragOver" onMouseClicked="#click8" prefHeight="115.0" prefWidth="385.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="summaryLabel8" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -271,7 +276,7 @@
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Button>
-                  <Text fx:id="mSummaryEntryText1" layoutX="14.0" layoutY="437.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Добавление арматуры в сводную ведомость" textAlignment="CENTER" wrappingWidth="772.89453125" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+                  <Text fx:id="mSummaryEntryText1" layoutX="14.0" layoutY="437.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Добавление арматуры в сводную ведомость" textAlignment="CENTER" wrappingWidth="772.89453125">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
@@ -314,7 +319,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Text>
-                  <Label fx:id="favoriteDropSpace" alignment="CENTER" layoutX="31.0" layoutY="28.0" onDragDropped="#favoriteDragDropped" onDragOver="#favoriteDragOver" prefHeight="213.0" prefWidth="530.0" text="My favorite" textAlignment="CENTER" wrapText="true">
+                  <Label fx:id="favoriteDropSpace" alignment="CENTER" layoutX="31.0" layoutY="28.0" onDragDropped="#favoriteDragDropped" onDragOver="#favoriteDragOver" prefHeight="213.0" prefWidth="530.0" style="-fx-border-color: BLACK; -fx-border-width: 5;" text="My favorite" textAlignment="CENTER" wrapText="true">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
